--- a/Craft2Gether/src/main/resources/application.properties
+++ b/Craft2Gether/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+server.servlet.context-path=/ctg
+spring.datasource.url = jdbc:mysql://localhost:3306/craft_to_gether_db?createDatabaseIfNotExist=true
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+logging.file.name=log/application.log
+logging.file.path=log
 
