--- a/Craft2Gether/src/main/resources/application.properties
+++ b/Craft2Gether/src/main/resources/application.properties
@@ -9,3 +9,4 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 logging.file.name=log/application.log
 logging.file.path=log
 frontend.url = http://localhost:4200
+security.ignored=/**
