--- a/craft2gether_front/package.json
+++ b/craft2gether_front/package.json
@@ -8,9 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^5.2.3",
     "core-js": "^3.8.3",
+    "fontawesome": "^5.6.3",
+    "vee-validate": "^4.8.6",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3"
+    "vue-router": "^4.0.3",
+    "yup": "^1.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -20,9 +24,7 @@
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3",
-    "naive-ui": "^2.34.3",
-    "vfonts": "^0.0.3"
+    "eslint-plugin-vue": "^8.0.3"
   },
   "eslintConfig": {
     "root": true,
