--- a/Craft2Gether/src/main/resources/application.properties
+++ b/Craft2Gether/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port: 3000
 server.servlet.context-path=/ctg
 spring.datasource.url = jdbc:mysql://localhost:3306/craft_to_gether_db?createDatabaseIfNotExist=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -8,5 +9,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 logging.file.name=log/application.log
 logging.file.path=log
-frontend.url = http://localhost:4200
+frontend.url = http://localhost:8080
 security.ignored=/**
