--- a/craft2gether_front/package.json
+++ b/craft2gether_front/package.json
@@ -8,11 +8,20 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-brands-svg-icons": "^6.4.0",
+    "@fortawesome/free-regular-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/vue-fontawesome": "^3.0.3",
+    "axios": "^1.4.0",
+    "boostrap": "^2.0.0",
     "bootstrap": "^5.2.3",
     "core-js": "^3.8.3",
     "fontawesome": "^5.6.3",
     "vee-validate": "^4.8.6",
     "vue": "^3.2.13",
+    "vue-axios": "^3.5.2",
     "vue-router": "^4.0.3",
     "yup": "^1.1.1"
   },
