--- a/craft2gether_front/package.json
+++ b/craft2gether_front/package.json
@@ -19,6 +19,7 @@
     "bootstrap": "^5.2.3",
     "core-js": "^3.8.3",
     "fontawesome": "^5.6.3",
+    "fs": "^0.0.1-security",
     "select-random-file": "^1.2.4",
     "vee-validate": "^4.8.6",
     "vue": "^3.2.13",
