--- a/Craft2Gether/src/main/resources/application.properties
+++ b/Craft2Gether/src/main/resources/application.properties
@@ -7,6 +7,6 @@ spring.datasource.password=root
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-logging.file.name=log/application.log
-logging.file.path=log
+#logging.file.name=log/application.log
+#logging.file.path=log
 frontend.url = http://localhost:8080
